--- a/workflow-templates/leo-organization-ci.yml
+++ b/workflow-templates/leo-organization-ci.yml
@@ -14,4 +14,4 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Run a one-line script
-        run: echo Hello from Leo Liang's Organization
+        run: "echo \"Hello from Leo Liang\\'s Organization\""
